# papo-project

./: .gitignore  CMakeCache.txt  README.md  neuralnet.c  neuralnet.h
code/: .clang-format  .gitignore  CMakeLists.txt  Doxyfile.in  README.md  thegame.txt
code/batch/: strong_scaling.batch
code/bench/: CMakeLists.txt  bench.md  bench_backpropagation.c  bench_genetic.c  bench_neuralnet.c  flops.py
code/data/: plot_generations.py  plot_strong_scaling.py  plot_weak_scaling.py  strong_scaling.csv  strong_scaling_dynsched-1-00.csv  strong_scaling_dynsched-1-0125.csv  strong_scaling_dynsched-1-025.csv  strong_scaling_dynsched-1-033.csv  strong_scaling_dynsched-1-0375.csv  strong_scaling_dynsched-1-05.csv  strong_scaling_dynsched-1-075.csv  strong_scaling_dynsched-10-05.csv  strong_scaling_dynsched-2-025.csv  strong_scaling_dynsched-5-05.csv  test_wins  weak_scaling.csv  weak_scaling_dynsched.csv
code/experiments/: CMakeLists.txt  exp_h2_game.c  exp_hvsn_game.c  exp_mpi_bcast_nets.c  exp_xor.c  test_qsort.c
code/neuralnet/: neuralnet.c  neuralnet.h
code/src/: CMakeLists.txt  main.c  neugen_test.c
code/src/example/: example.c  example.h
code/src/exe/: learning_success.c  main.c  ngg_game.c  ngg_game.h  ngg_game_helper.c  ngg_game_impl.c  ngg_hvsai.c  ngg_hvsai.h  ngg_test.c  ngg_test.h  ngg_test_impl.c  ngg_tool.c  ngg_tool.h  ngg_tool_impl.c
code/src/genetic/: genetic_algorithm.c  genetic_algorithm.h
code/src/go/: board.c  board.h  game.c  game.h  game_controller.c  game_controller.h  go.md  gtp.c  play_gtp.c  play_gtp.h  player.c  player.h  record.c  record.h
code/src/math_extend/: math_ext.c  math_ext.h
code/src/neuralnet/: backpropagation.c  learning.c  neuralnet.c  neuralnet.h  neuralnet_test.c
code/src/neuralnet_old/: neuralnet.c  neuralnet.h
code/src/newneunet/: learning.c  newneunet.c  newneunet.h
code/src/training/: training.c  training.h
code/src/training/data/0/: 0.sgf
code/src/training/data/1/: 0.sgf  2.sgf
code/src/training/data/2/: 0.sgf  1.sgf
code/src/training/data/3/: 0.sgf  1.sgf
code/src/training/data/9/: 1.sgf  2.sgf  3.sgf  4.sgf
code/src/util/: math_ext.c  math_ext.h  misc.c  misc.h  mpi.c  mpi.h  scheduler.c  scheduler.h  test_sigm_approx.c  util.c  util.h
code/tests/: CMakeLists.txt  check_example.c  check_genetic.c  check_go.c  check_math.c  check_neuralnet.c  check_newneunet.c  check_player.c  check_training.c  check_util.c  check_util_mpi.c
concept/: Matchdaten.txt  class_diagram.uxf  fragestellung.txt  gedanken.md  ideen_goprojekt.txt
concept/first_presentation/: .gitignore  Makefile
concept/paper/: .gitignore  literature.bib  neugengo_paper.tex
concept/paper/content/: abstract.tex  anhang.tex  einleitung.tex  ergebnis.tex  fazit.tex  go.tex  implementation.tex  messungen.tex  parallelisierung.tex  programm.tex
concept/paper/content/code/: fileformat  strong_scaling.batch
concept/presentation/: .gitignore  Makefile  neugengo-presentation.tex  preface.tex  seminarvortrag.aux  seminarvortrag.nav  seminarvortrag.out  seminarvortrag.snm  seminarvortrag.tex  seminarvortrag.toc  seminarvortrag.vrb
concept/presentation/content/: end.tex  ergebnis.tex  laufzeitmessungen.tex  leistungsanalyse.tex  loesungsansatz.tex  parallelisierungsschema.tex  problemstellung.tex  skalierbarkeit.tex
concept/presentation/content/img/: nnet.tex
